# data-update-test

./: README.md  pyproject.toml  update.py
core/: config.py  exceptions.py  mssql.py  schemas.py  settings.py
core/classifiers/: __init__.py  base.py  jaccard_classifier.py  kosgu_classifier.py  sbert_classifier.py  sbert_t5_classifier.py  tfidf_classifier.py
core/elastic/: client.py  queries.py
core/models/: all_models.py  collection.py  s3_downloader.py
core/text_preprocessing/: first_sentence.py  lemmatizer.py
core/utils/: logger.py  other.py
data/: csv_parameters.json  del_answers.csv  etalons.csv  greetings_templates.csv  statistics_parameters.json  sys_pub_mappings.json  templates_all_sys.csv  templates_sys1.csv  templates_sys47.csv
