[tool.poetry]
name = "PrjUpdate"
version = "0.1.0"
description = ""
authors = ["nichnikov <a.nichnikov@gmail.com>"]
readme = "README.md"
packages = [{ include = "core" }]


[tool.poetry.dependencies]
python = "^3.10"
pymystem3 = "^0.2.0"
elasticsearch = "^8.12.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
starlette-exporter = "^0.19.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.0"
pymssql = "^2.2.10"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
